# plustache

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  HISTORY.md  Makefile.am  Makefile.packaging.mk  README.md  _config.yml  configure.ac  index.html  index.md  params.json  rakefile
include/: context.hpp  plustache_types.hpp  template.hpp
include/plustache/: context.hpp  template.hpp
m4/: version.h.m4
msvc/: Default.targets  Directories.targets.example  plustache.sln  plustache_lib.vcxproj  plustache_lib.vcxproj.filters  plustache_test.vcxproj  plustache_test.vcxproj.filters  run.bat
msvc/x64/msvc120/gtest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
src/: context.cpp  main.cpp  template.cpp
tests/: test_change_delimiter.cpp  test_collections_plustache.cpp  test_html_escape_plustache.cpp  test_inverted_sections.cpp  test_multiple_plustache.cpp  test_nested_sections_plustache.cpp  test_partials_plustache.cpp  test_sections_plustache.cpp  test_simple_plustache.cpp  tests.cpp
utils/: gcovr
